@@ -500,6 +500,11 @@ IF(BUILD_APPS)
 	SUBDIRS(apps)
 ENDIF(BUILD_APPS)
 
+OPTION(BUILD_VALIDATION "Build tools for algorithm validation" OFF)
+IF(BUILD_VALIDATION)
+	SUBDIRS(validation)
+ENDIF(BUILD_VALIDATION)
+
 IF (BUILD_GUI)
   SUBDIRS(gui)
 ENDIF (BUILD_GUI)    
