@@ -100,83 +100,4 @@ VolumeFromFile::ReadDICOM( const char *path )
   return volume;
 }
 
-void 
-VolumeFromFile::ReadGeometryVanderbilt
-( const char*, int *const, Types::Coordinate *const )
-{
-}
-
-UniformVolume*
-VolumeFromFile::ReadVanderbilt( const char *path )
-{
-  FILE *fp = NULL;
-  if ( ! (fp = fopen( path, "r" )) ) return NULL;
-  
-  int dims[3] = { 1, 1, 1 };
-  double calib[3] = { 0, 0, 0 };
-
-  // parse header file for image dimensios etc.
-  char line[96], key[32], value[64];
-  while ( !feof( fp ) ) 
-    {
-    fgets( line, 96, fp );
-    if ( 2 == sscanf( line, "%32[a-zA-Z ]:= %64[0-9.: ]", key, value ) ) 
-      {
-      if ( ! strcmp( key, "Columns " ) ) 
-	{
-	dims[0] = atoi( value );
-	} 
-      else if ( ! strcmp( key, "Rows " ) ) 
-	{
-	dims[1] = atoi( value );
-	} 
-      else if ( ! strcmp( key, "Slices " ) ) 
-	{
-	dims[2] = atoi( value );
-	} 
-      else if ( ! strcmp( key, "Pixel size " ) ) 
-	{
-	sscanf( value, "%lf : %lf", calib, calib+1 );
-	} 
-      else if ( ! strcmp( key, "Slice thickness " ) ) 
-	{
-	calib[2] = static_cast<Types::Coordinate>( atof( value ) );
-	}
-      }
-    }
-  fclose( fp );
-  
-  // convert pixel dimensions to volume dimensions.
-  Types::Coordinate size[3];
-  for ( int i = 0; i < 3; ++i )
-    size[i] = static_cast<Types::Coordinate>( (dims[i] - 1) * calib[i] );
-
-  // create volume, for the time being with empty data array.
-  UniformVolume *volume = new UniformVolume( dims, size );
-
-  // generate image filename from header file path.
-  char imageFilename[PATH_MAX], *lastSlash;
-  strcpy( imageFilename, path );
-  if ( (lastSlash = strrchr( imageFilename, '/' ) ) )
-    ++lastSlash;
-  else
-    lastSlash = imageFilename;
-  strcpy( lastSlash, "image.bin" );
-
-  // open image file and read data.
-  CompressedStream imageStream( imageFilename );
-  TypedArray* data = TypedArray::Create( TYPE_SHORT, dims[0] * dims[1] * dims[2] );
-  imageStream.Read( data->GetDataPtr(), data->GetItemSize(), data->GetDataSize() );
-  
-#ifndef WORDS_BIGENDIAN
-  // change endianness from Sun to whatever we're currently on.
-  data->ChangeEndianness();
-#endif
-  
-  // set volume data array with what we just read.
-  volume->SetData( TypedArray::SmartPtr( data ) );
-  
-  return volume;
-}
-
 } // namespace cmtk
